--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,6 @@
 Version 1.3.0
 
+- added support for String Object;
 - added support for removing leading zeros in displaying numbers.
 
 Version 1.2.0
@@ -12,4 +13,4 @@ Version 1.1.0
 
 Version 1.0.0
 
-- initial Release.
+- initial release.
