--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,6 @@
 Version 1.3.1
 
-- changed pins to match schematics on project site.
+- changed pins on the examples to match schematics on project site.
 
 Version 1.3.0
 
