--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Version 1.3.2
+
+- ISSUE #5: Correction of string library import
+
 Version 1.3.1
 
 - changed pins on the examples to match schematics on project site.
