--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+Version 1.4.0
 
 - ISSUE #6: Support for specifying dots on setDisplayToString
   WARNING: setDisplayToString methods have changed prototype and are incompatible with code compiled for 1.3.x (if you specified a custom font)
