--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,5 @@
+- ISSUE #9: Backwards compatibility with previous Arduino IDE.
+
 Version 1.5.1
 
 - ISSUE #7: New character data in default font for '*';
