--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,5 @@
+Version 1.6.0
+
 - ISSUE #10: Support for starting position on setDisplayToString() methods.
   WARNING: setDisplayToString methods have changed prototype and are incompatible with code compiled for 1.5.x (if you specified a custom font)
 
