--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,5 @@
+- Restructuring for supporting other modules.
+
 Version 1.6.0
 
 - ISSUE #10: Support for starting position on setDisplayToString() methods.
