--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,5 @@
+- ISSUE #18: Corrected problem with setLEDs() caused by changes in the previous version.
+
 Version 2.0.0
 
 - Support for the TM1640;
