--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,5 @@
+- ISSUE #19: Corrected setDisplayToString dot bug.
+
 Version 2.0.1
 
 - ISSUE #15: Backwards compatibility with previous Arduino IDE (pure virtual functions were not supported);
