--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,5 @@
+Version 2.1.2
+
 - ISSUE #22: corrected setDisplayDigit repeatedly with the dot set to true;
 - ISSUE #24: Correction on setDisplayToDecNumber bug (thanks to hbx3485).
 
